--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "url": "https://github.com/jcs090218/flx-ts/issues"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsup",
+    "test": "jest"
   },
   "author": "Jen-Chieh Shen",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.11",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
