--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/jcs090218/flx-ts/issues"
   },
   "scripts": {
-    "build": "tsup",
+    "build": "tsup && npx webpack",
     "test": "jest"
   },
   "author": "Jen-Chieh Shen",
@@ -25,8 +25,11 @@
     "@types/jest": "^29.5.11",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4"
   }
 }
